Updating display of pub section, making sure it'll display correctly live on mobile devices :eyes:

--- a/assets/mb-custom-css-js/mb-custom.css
+++ b/assets/mb-custom-css-js/mb-custom.css
@@ -2,3 +2,8 @@
 .customTopPadding {
     padding-top: 80px;
 }
+
+/* .publication-image {
+    max-width: 150px;
+    max-height: 100px;
+} */
